src/test/resources/de/cd4analysis/cocos/invalid/XXXNoCode3.cd
package de.cd4analysis.cocos;

classdiagram XXXNoCode3 {
  enum E;
  class C;
  interface I1 extends C;
  interface I2 extends E;
  
}